# trimana_engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: cmake-multi-platform.yml  platform-linux.yml
docs/core/: Doxyfile
res/shaders/: main.glsl  main_fragment.glsl  main_fragment_copy.glsl  main_vertex.glsl  main_vertex_copy.glsl  texture.glsl  texture_fragment.glsl  texture_vertex.glsl
src/app/: CMakeLists.txt
src/app/app/: application.cpp  application.hpp  example_layer.cpp  example_layer.hpp
src/app/entrypoint/: trimana.cpp
src/core/: CMakeLists.txt
src/core/Window/: window.cpp  window.hpp
src/core/events/: events.hpp  events_keyboard.hpp  events_mouse.hpp  events_receiver.cpp  events_receiver.hpp  events_window.hpp
src/core/gapi/: gapi.hpp  gapi_impl_opengl.cpp  gapi_impl_opengl.hpp  gapi_renderer.hpp
src/core/gapi/opengl/: gl_buffers.cpp  gl_buffers.hpp  gl_context.cpp  gl_context.hpp  gl_info.hpp  gl_shader.cpp  gl_shader.hpp  gl_vertex_array.cpp  gl_vertex_array.hpp  opengl.cpp  opengl.hpp
src/core/inputs/: input.cpp  input.hpp
src/core/layers/: imgui_layer.cpp  imgui_layer.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp
src/core/renderer/: buffers.cpp  buffers.hpp  gbuffers.cpp  gbuffers.hpp  gcontext.hpp  grenderer.cpp  grenderer.hpp  gshader.cpp  gshader.hpp  gvertex_array.cpp  gvertex_array.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp
src/core/utils/: assert.hpp  base.hpp  log.cpp  log.hpp  platform_detection.hpp  time_steps.hpp
vendors/: CMakeLists.txt
